# autocrawling_agent

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: openai_autocrawling_agent.py
src/api/: main.py  models.py
src/api/exeptions/: custom_exceptions.py  handlers.py
src/api/router/: crawling_router.py
src/crawling/: openai_autocrawling_chain.py
src/crawling/utils/image_processing/: image_processor.py
src/crawling/utils/image_scrap/: byte_to_image_converter.py  image_saver.py  image_scraper.py
src/utils/image_scrap/: image_saver.py
