[tool.poetry]
name = "autocrawling-agent"
version = "0.1.0"
description = ""
authors = ["JminJ <jminju254@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
playwright = "^1.45.1"
openai = "^1.40.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
langchain-openai = "^0.1.20"
numpy = "1.26.4"
langchain = "^0.2.12"
fastapi = "^0.112.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
